crates/pixi-build-rust/src/snapshots/pixi_build_rust__build_script__test__sccache@cmdexe.snap
---
source: crates/pixi-build-rust/src/build_script.rs
expression: "script.join(\"\\n\")"
---
SET RUSTC_WRAPPER=sccache
cargo build --release --manifest-path my-prefix-dir/Cargo.toml 
if errorlevel 1 exit 1
if exist "my-prefix-dir\target\release\*.exe" (
    for %%f in ("my-prefix-dir\target\release\*.exe") do (
        copy "%%f" "%PREFIX%\bin\"
    )
)
sccache --show-stats
